grammar.js
  script: $ => seq(opt(/<\?[hH][hH]/), rep($._statement)),

  identifier: $ => identifier,

  variable: $ => token(seq('$', identifier)),

  _keyword: $ =>
    choice(
      'type',
      'newtype',
      'shape',
      'tupe',
      'clone',
      'new',
      'print',
      $._primitive_type,
      $._collection_type,
    ),

  qualified_identifier: $ =>
    choice(
      seq(opt($.identifier), seq.rep1($._backslash, $.identifier)),
      $.identifier,
    ),

  _backslash: $ => '\\',

  scoped_identifier: $ =>
    seq(
      choice(
        $.qualified_identifier,
        $.variable,
        $.scope_identifier,
        $._xhp_identifier,
        $.pipe_variable,
      ),
      '::',
      choice($.identifier, $.variable),
    ),

  _statement: $ =>
    choice(
      $._declaration,

      $.compound_statement,
      $.empty_statement,
      $.expression_statement,

      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.echo_statement,
      $.unset_statement,

      $.use_statement,
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.switch_statement,
      $.foreach_statement,
      $.try_statement,
      $.concurrent_statement,
      $.using_statement,
    ),

  _expression: $ =>
    choice(
      $.heredoc,
      $.array,
      $.tuple,
      $.shape,
      $.collection,
      $._literal,
      $._variablish,
      $.prefixed_string,
      $.parenthesized_expression,
      $.binary_expression,
      $.prefix_unary_expression,
      $.postfix_unary_expression,
      $.is_expression,
      $.as_expression,
      $.awaitable_expression,
      $.yield_expression,
      $.cast_expression,
      $.ternary_expression,
      $.lambda_expression,
      $.call_expression,
      $.selection_expression,
      $.new_expression,
      $.include_expression,
      $.require_expression,
      $.anonymous_function_expression,
      $.xhp_expression,
    ),

  // Statements

  expression_statement: $ => seq($._expression, ';'),

  compound_statement: $ => seq('{', rep($._statement), '}'),

  integer: $ =>
    token(
      choice(
        // Integer
        /[1-9]\d*/,
        // Octal - Hack seems to accept non octal literals like 09. Intentional?
        /0[0-7]*/,
        // Hex
        /0[xX][0-9a-fA-F]+/,
        // Binary
        /0[bB][01]+/,
      ),
    ),

  // Tree-sitter confuses boolean /(true|false)/ with identifier. Don't know why.
  string: $ =>
    token(
      choice(
        /'(\\'|\\\\|\\?[^'\\])*'/,
        /"(\\"|\\\\|\\?[^"\\])*"/,
      ),
    ),

  _type: $ =>
    choice(
      $.type_specifier,
      $.type_constant,
      $.shape_type_specifier,
      $.function_type_specifier,
      $.tuple_type_specifier,
    ),

  type_specifier: $ =>
    seq(
      rep($._type_modifier),
      choice(
        $._primitive_type,
        $.qualified_identifier,
        $._collection_type,
        $._xhp_identifier,
      ),
      opt($.type_arguments),
    ),

  _type_modifier: $ =>
    choice(
      alias('@', $.soft_modifier),
      alias('?', $.nullable_modifier),
      alias('~', $.like_modifier),
    ),

  tuple_type_specifier: $ =>
    seq(rep($._type_modifier), '(', com($._type, ','), ')'),

  function_type_specifier: $ =>
    seq(
      rep($._type_modifier),
      '(',
      /function\s*\(/,
      com.opt(opt($.inout_modifier), $._type, opt($.variadic_modifier), ','),
      ')',
      ':',
      field('return_type', $._type),
      ')',
    ),

  shape_type_specifier: $ =>
    seq(
      rep($._type_modifier),
      'shape',
      '(',
      com.opt(choice($.field_specifier, alias('...', $.open_modifier)), ','),
      ')',
    ),

  field_specifier: $ =>
    seq(alias.opt('?', $.optional_modifier), $._expression, '=>', $._type),

  _collection_type: $ =>
    choice('array', 'varray', 'darray', 'vec', 'dict', 'keyset'),

  _primitive_type: $ =>
    choice(
      'bool',
      'float',
      'int',
      'string',
      'arraykey',
      'void',
      'nonnull',
      $.null,
      'mixed',
      'dynamic',
      'noreturn',
    ),

  type_arguments: $ => seq('<', com.opt($._type, ','), '>'),

  type_parameters: $ => seq('<', com($.type_parameter, ','), '>'),

  type_parameter: $ =>
    seq(
      opt($.attribute_modifier),
      choice.opt(
        alias('+', $.covariant_modifier),
        alias('-', $.contravariant_modifier),
        alias('reify', $.reify_modifier),
      ),
      field('name', $.identifier),
      seq.rep(
        field('constraint_operator', choice('as', 'super')),
        field('constraint_type', $._type),
      ),
    ),

  where_clause: $ => seq('where', seq.rep1($.where_constraint, opt(','))),

  where_constraint: $ =>
    seq(
      // Weird that Hack allows the left operand to be a full on type.
      field('constraint_left_type', $._type),
      field('constraint_operator', choice('as', 'super', '=')),
      field('constraint_right_type', $._type),
    ),

  // Collections

  parenthesized_expression: $ => seq('(', $._expression, ')'),

  binary_expression: $ =>
    choice(
      ...[
        '|>',
        '??',
        '||',
        '&&',
        '|',
        '^',
        '&',
        '==',
        '!=',
        '===',
        '!==',
        '<',
        '>',
        '<=',
        '>=',
        '<=>',
        '<<',
        '>>',
        '+',
        '-',
        '.',
        '*',
        '/',
        '%',
        '**',

        '?:',

        '=',
        '??=',
        '.=',
        '|=',
        '^=',
        '&=',
        '<<=',
        '>>=',
        '+=',
        '-=',
        '*=',
        '/=',
        '%=',
        '**=',
      ].map(operator =>
        prec[operator](
          seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          ),
        ),
      ),
    ),

  postfix_unary_expression: $ =>
    prec.postfix(seq($._expression, choice('++', '--'))),

  lambda_expression: $ =>
    seq(
      opt($.attribute_modifier),
      opt($.async_modifier),
      choice(
        // Make a single-parameter lambda node look like any other lambda node.
        alias($._single_parameter_parameters, $.parameters),
        seq($.parameters, seq.opt(':', field('return_type', $._type))),
      ),
      '==>',
      field('body', choice($._expression, $.compound_statement)),
    ),

  _single_parameter_parameters: $ => alias($._single_parameter, $.parameter),

  arguments: $ => seq('(', com.opt($.argument, ','), ')'),

  argument: $ =>
    seq(choice.opt($.inout_modifier, $.variadic_modifier), $._expression),

  alias_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      choice('type', 'newtype'),
      $.identifier,
      opt($.type_parameters),
      field('as', seq.opt('as', $._type)),
      '=',
      $._type,
      ';',
    ),

  function_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      $._function_declaration_header,
      choice(field('body', $.compound_statement), ';'),
    ),

  _function_declaration_header: $ =>
    seq(
      opt($.async_modifier),
      'function',
      field('name', $.identifier),
      opt($.type_parameters),
      $.parameters,
      seq.opt(':', opt($.attribute_modifier), field('return_type', $._type)),
      opt($.where_clause),
    ),

  parameters: $ =>
    prec.paren(
      seq('(', choice.opt($.variadic_modifier, com($.parameter, ',')), ')'),
    ),

  parameter: $ =>
    seq(
      opt($.attribute_modifier),
      opt($.visibility_modifier),
      opt($.inout_modifier),
      field('type', opt($._type)),
      opt($.variadic_modifier),
      field('name', $.variable),
      seq.opt('=', field('default_value', $._expression)),
    ),

  trait_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      'trait',
      field('name', $.identifier),
      opt($.type_parameters),
      opt($.implements_clause),
      opt($.where_clause),
      field('body', $.member_declarations),
    ),

  interface_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      'interface',
      field('name', $.identifier),
      opt($.type_parameters),
      opt($.extends_clause),
      opt($.where_clause),
      field('body', $.member_declarations),
    ),

  class_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      opt($._class_modifier),
      opt($._class_modifier),
      opt($.xhp_modifier),
      'class',
      field('name', choice($.identifier, $._xhp_identifier)),
      opt($.type_parameters),
      opt($.extends_clause),
      opt($.implements_clause),
      opt($.where_clause),
      field('body', $.member_declarations),
    ),

  member_declarations: $ =>
    seq(
      '{',
      choice.rep(
        alias($._class_const_declaration, $.const_declaration),
        $.method_declaration,
        $.property_declaration,
        $.type_const_declaration,
        $.trait_use_clause,
        $.require_implements_clause,
        $.require_extends_clause,
        $.xhp_attribute_declaration,
        $.xhp_children_declaration,
        $.xhp_category_declaration,
      ),
      '}',
    ),

  trait_use_clause: $ =>
    seq(
      'use',
      com($._type),
      choice(
        seq(
          '{',
          seq.rep(choice($.trait_select_clause, $.trait_alias_clause), ';'),
          '}',
        ),
        ';',
      ),
    ),

  trait_select_clause: $ =>
    seq(
      $.qualified_identifier,
      '::',
      $.identifier,
      'insteadof',
      com($.qualified_identifier),
    ),

  trait_alias_clause: $ =>
    seq(
      $.identifier,
      'as',
      choice(
        seq($.visibility_modifier, opt($.identifier)),
        seq(opt($.visibility_modifier), $.identifier),
      ),
    ),

  extends_clause: $ => seq('extends', com($._type)),

  implements_clause: $ => seq('implements', com($._type)),

  require_extends_clause: $ => seq('require', 'extends', com($._type), ';'),

  require_implements_clause: $ =>
    seq('require', 'implements', com($._type), ';'),

  method_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      rep($._member_modifier),
      $._function_declaration_header,
      choice(field('body', $.compound_statement), ';'),
    ),

  _class_const_declaration: $ =>
    seq(
      rep($._member_modifier),
      'const',
      field('type', opt($._type)),
      com(alias($._class_const_declarator, $.const_declarator)),
      ';',
    ),

  type_const_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      rep($._member_modifier),
      'const',
      'type',
      field('name', $.identifier),
      opt($.type_parameters),
      field('as', seq.opt('as', $._type)),
      field('type', seq.opt('=', $._type)),
      ';',
    ),

  const_declaration: $ =>
    seq('const', field('type', opt($._type)), com($.const_declarator), ';'),

  const_declarator: $ =>
    seq(
      field('name', choice($.identifier, alias($._keyword, $.identifier))),
      field('value', seq('=', $._expression)),
    ),

  property_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      rep($._member_modifier),
      field('type', opt($._type)),
      com($.property_declarator),
      ';',
    ),

  property_declarator: $ =>
    seq(field('name', $.variable), field('value', seq.opt('=', $._expression))),

  enum_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      'enum',
      field('name', $.identifier),
      ':',
      field('type', $._type),
      field('as', seq.opt('as', $._type)),
      '{',
      rep($.enumerator),
      '}',
    ),

  enumerator: $ => seq($.identifier, '=', $._expression, ';'),

  namespace_declaration: $ =>
    prec.right(
      seq(
        'namespace',
        choice.opt(
          seq(field('name', $.qualified_identifier), ';'),
          seq(
            opt(field('name', $.qualified_identifier)),
            field('body', $.compound_statement),
          ),
        ),
      ),
    ),

  // Modifiers

  _member_modifier: $ =>
    choice(
      $.visibility_modifier,
      $.static_modifier,
      $.abstract_modifier,
      $.final_modifier,
    ),

  _class_modifier: $ => choice($.abstract_modifier, $.final_modifier),

  final_modifier: $ => 'final',

  abstract_modifier: $ => 'abstract',

  static_modifier: $ => 'static',

  visibility_modifier: $ => choice('public', 'protected', 'private'),

  attribute_modifier: $ =>
    seq('<<', com($.qualified_identifier, opt($.arguments), ','), '>>'),

  inout_modifier: $ => 'inout',

  variadic_modifier: $ => '...',

  async_modifier: $ => 'async',

  xhp_identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*([-:][a-zA-Z0-9_]+)*/,

  xhp_class_identifier: $ => /:[a-zA-Z_][a-zA-Z0-9_]*([-:][a-zA-Z0-9_]+)*/,

  _xhp_identifier: $ => choice($.xhp_identifier, $.xhp_class_identifier),

  xhp_category_identifier: $ => /%[a-zA-Z_][a-zA-Z0-9_]*([-:][a-zA-Z0-9_]+)*/,

  xhp_attribute_declaration: $ =>
    seq('attribute', com($.xhp_class_attribute), ';'),

  xhp_class_attribute: $ =>
    seq(
      field('type', choice($._type, $.xhp_enum_type)),
      field('name', opt($.xhp_identifier)),
      seq.opt('=', field('default', $._expression)),
      choice.opt('@required', '@lateinit'),
    ),

  _xhp_attribute_expression: $ =>
    choice(
      $.xhp_identifier,
      $.xhp_class_identifier,
      $.xhp_category_identifier,
      alias($._xhp_binary_expression, $.binary_expression),
      alias($._xhp_postfix_unary_expression, $.postfix_unary_expression),
      alias($._xhp_parenthesized_expression, $.parenthesized_expression),
    ),

  // Misc

  comment: $ =>
    token(
      choice(
        seq('#', /.*/),
        seq('//', /.*/),
        seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
      ),
    ),

  // Future Deprecations

  xhp_children_declaration: $ =>
    seq('children', com($._xhp_attribute_expression), ';'),

  xhp_category_declaration: $ =>
    seq('category', com($.xhp_category_identifier), ';'),
