test/corpus/declarations.txt
==========================
Async functions
==========================

async function func0(): void {}

async function func1<T1 as int>() {}

async ($x) ==> $x + 1;

---

(script
  (function_declaration
    (async_modifier)
    name: (identifier)
    (parameters)
    return_type: (type_specifier)
    body: (compound_statement))
  (function_declaration
    (async_modifier)
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)
        constraint_type: (type_specifier)))
    (parameters)
    body: (compound_statement))
  (expression_statement
    (lambda_expression
      (async_modifier)
      (parameters
        (parameter
          name: (variable)))
      body: (binary_expression
        left: (variable)
        right: (integer)))))

==========================
Attribute
==========================

<<Attribute, Attribute(1, 2),>>
class C {
  <<Attribute, Attribute(1, 2,)>>
  function method() {}
}

<<Attribute(C,), Attribute>>
function func() {
}

---

(script
  (class_declaration
    (attribute_modifier
      (qualified_identifier
        (identifier))
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (integer))
        (argument
          (integer))))
    name: (identifier)
    body: (member_declarations
      (method_declaration
        (attribute_modifier
          (qualified_identifier
            (identifier))
          (qualified_identifier
            (identifier))
          (arguments
            (argument
              (integer))
            (argument
              (integer))))
        name: (identifier)
        (parameters)
        body: (compound_statement))))
  (function_declaration
    (attribute_modifier
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (qualified_identifier
            (identifier))))
      (qualified_identifier
        (identifier)))
    name: (identifier)
    (parameters)
    body: (compound_statement)))

==========================
Attribute function
==========================

function func(<<__Soft>> int $int): <<__Soft>> int {}

---

(script
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        (attribute_modifier
          (qualified_identifier
            (identifier)))
        type: (type_specifier)
        name: (variable)))
    (attribute_modifier
      (qualified_identifier
        (identifier)))
    return_type: (type_specifier)
    body: (compound_statement)))

==========================
Attribute type
==========================

<<A1>>
newtype T1 = ?shape(
  ?'int' => int
);

<<A3(1), A2(2,3,)>>
type T2 = (function(T1): string);

<<A4(1), A5, A6(1,3,4)>>
newtype T3 as int = int;

---

(script
  (alias_declaration
    (attribute_modifier
      (qualified_identifier
        (identifier)))
    (identifier)
    (shape_type_specifier
      (nullable_modifier)
      (field_specifier
        (optional_modifier)
        (string)
        (type_specifier))))
  (alias_declaration
    (attribute_modifier
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (integer)))
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (integer))
        (argument
          (integer))))
    (identifier)
    (function_type_specifier
      (type_specifier
        (qualified_identifier
          (identifier)))
      return_type: (type_specifier)))
  (alias_declaration
    (attribute_modifier
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (integer)))
      (qualified_identifier
        (identifier))
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (integer))
        (argument
          (integer))
        (argument
          (integer))))
    (identifier)
    as: (type_specifier)
    (type_specifier)))

==========================
Attribute type parameter
==========================

class C<<<Reify>> reify T> {}

function func<<<Reify>> T>(): void {}

---

(script
  (class_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        (attribute_modifier
          (qualified_identifier
            (identifier)))
        (reify_modifier)
        name: (identifier)))
    body: (member_declarations))
  (function_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        (attribute_modifier
          (qualified_identifier
            (identifier)))
        name: (identifier)))
    (parameters)
    return_type: (type_specifier)
    body: (compound_statement)))

==========================
Class
==========================

<<Attribute(R::class), Attribute(1,),>>
class F<Ta as A, Tb super B<A, C>> extends B implements A\B<A, C>, C\D {
  function method<Ta as A, Tb super B>(): Tc {}
}

---

(script
  (class_declaration
    (attribute_modifier
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (scoped_identifier
            (qualified_identifier
              (identifier))
            (identifier))))
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (integer))))
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)
        constraint_type: (type_specifier
          (qualified_identifier
            (identifier))))
      (type_parameter
        name: (identifier)
        constraint_type: (type_specifier
          (qualified_identifier
            (identifier))
          (type_arguments
            (type_specifier
              (qualified_identifier
                (identifier)))
            (type_specifier
              (qualified_identifier
                (identifier)))))))
    (extends_clause
      (type_specifier
        (qualified_identifier
          (identifier))))
    (implements_clause
      (type_specifier
        (qualified_identifier
          (identifier)
          (identifier))
        (type_arguments
          (type_specifier
            (qualified_identifier
              (identifier)))
          (type_specifier
            (qualified_identifier
              (identifier)))))
      (type_specifier
        (qualified_identifier
          (identifier)
          (identifier))))
    body: (member_declarations
      (method_declaration
        name: (identifier)
        (type_parameters
          (type_parameter
            name: (identifier)
            constraint_type: (type_specifier
              (qualified_identifier
                (identifier))))
          (type_parameter
            name: (identifier)
            constraint_type: (type_specifier
              (qualified_identifier
                (identifier)))))
        (parameters)
        return_type: (type_specifier
          (qualified_identifier
            (identifier)))
        body: (compound_statement)))))

==========================
Class const
==========================

abstract class C {
  abstract const A\B C01;
  const A\B C02 = A\B::C0;
  const C03 = A\B::C0;

  const int C1 = 1;
  const int C2 = 1, C3 = 1;
  const C4 = 1;
  const C5 = 1, C6 = 1;

  abstract const int C7;
  abstract const int C8, C9;
  abstract const CA;
  abstract const CB, CC;
}

---

(script
  (class_declaration
    (abstract_modifier)
    name: (identifier)
    body: (member_declarations
      (const_declaration
        (abstract_modifier)
        type: (type_specifier
          (qualified_identifier
            (identifier)
            (identifier)))
        (const_declarator
          name: (identifier)))
      (const_declaration
        type: (type_specifier
          (qualified_identifier
            (identifier)
            (identifier)))
        (const_declarator
          name: (identifier)
          value: (scoped_identifier
            (qualified_identifier
              (identifier)
              (identifier))
            (identifier))))
      (const_declaration
        (const_declarator
          name: (identifier)
          value: (scoped_identifier
            (qualified_identifier
              (identifier)
              (identifier))
            (identifier))))
      (const_declaration
        type: (type_specifier)
        (const_declarator
          name: (identifier)
          value: (integer)))
      (const_declaration
        type: (type_specifier)
        (const_declarator
          name: (identifier)
          value: (integer))
        (const_declarator
          name: (identifier)
          value: (integer)))
      (const_declaration
        (const_declarator
          name: (identifier)
          value: (integer)))
      (const_declaration
        (const_declarator
          name: (identifier)
          value: (integer))
        (const_declarator
          name: (identifier)
          value: (integer)))
      (const_declaration
        (abstract_modifier)
        type: (type_specifier)
        (const_declarator
          name: (identifier)))
      (const_declaration
        (abstract_modifier)
        type: (type_specifier)
        (const_declarator
          name: (identifier))
        (const_declarator
          name: (identifier)))
      (const_declaration
        (abstract_modifier)
        (const_declarator
          name: (identifier)))
      (const_declaration
        (abstract_modifier)
        (const_declarator
          name: (identifier))
        (const_declarator
          name: (identifier))))))

==========================
Class parameter visibility
==========================

class C {
  public function __construct(<<__Soft>> private int $prop = 1, string ...$name) {}
}

---

(script
  (class_declaration
    name: (identifier)
    body: (member_declarations
      (method_declaration
        (visibility_modifier)
        name: (identifier)
        (parameters
          (parameter
            (attribute_modifier
              (qualified_identifier
                (identifier)))
            (visibility_modifier)
            type: (type_specifier)
            name: (variable)
            default_value: (integer))
          (parameter
            type: (type_specifier)
            (variadic_modifier)
            name: (variable)))
        body: (compound_statement)))))

==========================
Class type parameters
==========================

abstract final class F<Ta as A, Tb super B<A, C>> extends B implements A\B<A, C>, C\D {
  function method<Ta as A, Tb super B>(): Tc {}
}

---

(script
  (class_declaration
    (abstract_modifier)
    (final_modifier)
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)
        constraint_type: (type_specifier
          (qualified_identifier
            (identifier))))
      (type_parameter
        name: (identifier)
        constraint_type: (type_specifier
          (qualified_identifier
            (identifier))
          (type_arguments
            (type_specifier
              (qualified_identifier
                (identifier)))
            (type_specifier
              (qualified_identifier
                (identifier)))))))
    (extends_clause
      (type_specifier
        (qualified_identifier
          (identifier))))
    (implements_clause
      (type_specifier
        (qualified_identifier
          (identifier)
          (identifier))
        (type_arguments
          (type_specifier
            (qualified_identifier
              (identifier)))
          (type_specifier
            (qualified_identifier
              (identifier)))))
      (type_specifier
        (qualified_identifier
          (identifier)
          (identifier))))
    body: (member_declarations
      (method_declaration
        name: (identifier)
        (type_parameters
          (type_parameter
            name: (identifier)
            constraint_type: (type_specifier
              (qualified_identifier
                (identifier))))
          (type_parameter
            name: (identifier)
            constraint_type: (type_specifier
              (qualified_identifier
                (identifier)))))
        (parameters)
        return_type: (type_specifier
          (qualified_identifier
            (identifier)))
        body: (compound_statement)))))

==========================
Class where
==========================

class C <T1> extends B<T2> implements A<T3> where T2 = T3 {
  private function __construct(T1 $param) where ?T1 super vec<int>, {}
}

---

(script
  (class_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (extends_clause
      (type_specifier
        (qualified_identifier
          (identifier))
        (type_arguments
          (type_specifier
            (qualified_identifier
              (identifier))))))
    (implements_clause
      (type_specifier
        (qualified_identifier
          (identifier))
        (type_arguments
          (type_specifier
            (qualified_identifier
              (identifier))))))
    (where_clause
      (where_constraint
        constraint_left_type: (type_specifier
          (qualified_identifier
            (identifier)))
        constraint_right_type: (type_specifier
          (qualified_identifier
            (identifier)))))
    body: (member_declarations
      (method_declaration
        (visibility_modifier)
        name: (identifier)
        (parameters
          (parameter
            type: (type_specifier
              (qualified_identifier
                (identifier)))
            name: (variable)))
        (where_clause
          (where_constraint
            constraint_left_type: (type_specifier
              (nullable_modifier)
              (qualified_identifier
                (identifier)))
            constraint_right_type: (type_specifier
              (type_arguments
                (type_specifier)))))
        body: (compound_statement)))))

==========================
Const
==========================

const int C1 = 1;
const int C2 = 1, C3 = 1;
const C4 = 1;
const C5 = 1, C6 = 1;

---

(script
  (const_declaration
    type: (type_specifier)
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    type: (type_specifier)
    (const_declarator
      name: (identifier)
      value: (integer))
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer))
    (const_declarator
      name: (identifier)
      value: (integer))))

==========================
Const keyword
==========================

// Kinda wish this wasn't allowed. Seems like asking for trouble.

const type = 1;
const newtype = 1;
const namespace = 1;

// 🤦
const int int = 1;

const bool = 1;
const float = 1;
const int = 1;
const string = 1;
const arraykey = 1;
const void = 1;
const nonnull = 1;
const null = 1;
const mixed = 1;
const dynamic = 1;
const noreturn = 1;

const array = 1;
const varray = 1;
const darray = 1;
const vec = 1;
const dict = 1;
const keyset = 1;

const tuple = 1;
const shape = 1;

---

(script
  (comment)
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (comment)
  (const_declaration
    type: (type_specifier)
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer)))
  (const_declaration
    (const_declarator
      name: (identifier)
      value: (integer))))

==========================
Empty function
==========================

namespace {
  <<__PHPStdLib, __Pure>>
  function is_bool($var): bool;
  <<__PHPStdLib, __Pure>>
  function is_int($var): bool;
}

---

(script
  (namespace_declaration
    body: (compound_statement
      (function_declaration
        (attribute_modifier
          (qualified_identifier
            (identifier))
          (qualified_identifier
            (identifier)))
        name: (identifier)
        (parameters
          (parameter
            name: (variable)))
        return_type: (type_specifier))
      (function_declaration
        (attribute_modifier
          (qualified_identifier
            (identifier))
          (qualified_identifier
            (identifier)))
        name: (identifier)
        (parameters
          (parameter
            name: (variable)))
        return_type: (type_specifier)))))

==========================
Enum
==========================

enum Enum: int {}

<<Beenum>>
enum Enum : int {
  F1 = 1;
  F2 = 8;
  F3 = C::CONST;
  F4 = 'a'.'b';
}

---

(script
  (enum_declaration
    name: (identifier)
    type: (type_specifier))
  (enum_declaration
    (attribute_modifier
      (qualified_identifier
        (identifier)))
    name: (identifier)
    type: (type_specifier)
    (enumerator
      (identifier)
      (integer))
    (enumerator
      (identifier)
      (integer))
    (enumerator
      (identifier)
      (scoped_identifier
        (qualified_identifier
          (identifier))
        (identifier)))
    (enumerator
      (identifier)
      (binary_expression
        left: (string)
        right: (string)))))

==========================
Enum type constraint
==========================

enum Enum: int as int {
  F1 = 1;
  F2 = 8;
}

---

(script
  (enum_declaration
    name: (identifier)
    type: (type_specifier)
    as: (type_specifier)
    (enumerator
      (identifier)
      (integer))
    (enumerator
      (identifier)
      (integer))))

==========================
Function
==========================

function func0(): void {}

function func1(...) {}

function func2($arg) {}

function func3(int $arg) {}

function func4(int $arg): void {}

function func5(int $arg1, bool $arg2): void {}

---

(script
  (function_declaration
    name: (identifier)
    (parameters)
    return_type: (type_specifier)
    body: (compound_statement))
  (function_declaration
    name: (identifier)
    (parameters
      (variadic_modifier))
    body: (compound_statement))
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        name: (variable)))
    body: (compound_statement))
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        type: (type_specifier)
        name: (variable)))
    body: (compound_statement))
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        type: (type_specifier)
        name: (variable)))
    return_type: (type_specifier)
    body: (compound_statement))
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        type: (type_specifier)
        name: (variable))
      (parameter
        type: (type_specifier)
        name: (variable)))
    return_type: (type_specifier)
    body: (compound_statement)))

==========================
Function inout
==========================

function func(<<__Soft>> inout int $arg1, inout int $arg2) {}

---

(script
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        (attribute_modifier
          (qualified_identifier
            (identifier)))
        (inout_modifier)
        type: (type_specifier)
        name: (variable))
      (parameter
        (inout_modifier)
        type: (type_specifier)
        name: (variable)))
    body: (compound_statement)))

==========================
Function soft variadic
==========================

function func(<<__Soft>> int ...$arg1) {}

---

(script
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        (attribute_modifier
          (qualified_identifier
            (identifier)))
        type: (type_specifier)
        (variadic_modifier)
        name: (variable)))
    body: (compound_statement)))

==========================
Function type parameters
==========================

function func<Ta, Tb as int, Td super int>(): void {}

---

(script
  (function_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier))
      (type_parameter
        name: (identifier)
        constraint_type: (type_specifier))
      (type_parameter
        name: (identifier)
        constraint_type: (type_specifier)))
    (parameters)
    return_type: (type_specifier)
    body: (compound_statement)))

==========================
Function type specifier
==========================

type func = (function(int, ?string,): string);

function func((function(inout int): string) $func): (function(int): string) {}

---

(script
  (alias_declaration
    (identifier)
    (function_type_specifier
      (type_specifier)
      (type_specifier
        (nullable_modifier))
      return_type: (type_specifier)))
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        type: (function_type_specifier
          (inout_modifier)
          (type_specifier)
          return_type: (type_specifier))
        name: (variable)))
    return_type: (function_type_specifier
      (type_specifier)
      return_type: (type_specifier))
    body: (compound_statement)))

==========================
Function where
==========================

function func1<T>(): T where T as int {}

function func2<T>(): T where vec<T> = int {}

---

(script
  (function_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (parameters)
    return_type: (type_specifier
      (qualified_identifier
        (identifier)))
    (where_clause
      (where_constraint
        constraint_left_type: (type_specifier
          (qualified_identifier
            (identifier)))
        constraint_right_type: (type_specifier)))
    body: (compound_statement))
  (function_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (parameters)
    return_type: (type_specifier
      (qualified_identifier
        (identifier)))
    (where_clause
      (where_constraint
        constraint_left_type: (type_specifier
          (type_arguments
            (type_specifier
              (qualified_identifier
                (identifier)))))
        constraint_right_type: (type_specifier)))
    body: (compound_statement)))

==========================
Function where tricky
==========================

function func1<T>() where T = int, {}

function func2<T>() where ?vec<T> = int, T super int {}

# Optional comma. Why tho?
function func3<T>() where ?vec<T> = int T super int {}

---
